# ysn

./: .gitignore  CMakeLists.txt  README.md  dependency.md  documentation.md  pyproject.toml  setup.sh  vcpkg.json
.github/workflows/: cmake-single-platform.yml
template/: base_template.cpp  base_template.hpp  bisection.cpp  bisection.hpp  bsgs.hpp  factorial_batch.hpp  factorial_batch_me.hpp  factorial_embedded.hpp  fraction.cpp  fraction.hpp  garner.cpp  garner.hpp  graph.cpp  graph.hpp  hoge.cpp  less_arg.cpp  less_arg.hpp  linalg.cpp  linalg.hpp  marathon.cpp  marathon.hpp  median_multiset.cpp  median_multiset.hpp  modint.cpp  modint.hpp  modint1e9p7.cpp  modint1e9p7.hpp  modint2^61m1.cpp  modint2^61m1.hpp  modint998244353.cpp  modint998244353.hpp  modint_factorial_cache.cpp  modint_factorial_cache.hpp  modint_petit.cpp  modint_petit.hpp  modint_petit_p.hpp  modlog.cpp  modlog.hpp  opf.cpp  opf.hpp  (+14 more)
template/array/: argsort.cpp  argsort.hpp  bicumsum.cpp  bicumsum.hpp  cartesian_tree.hpp  cumsum.cpp  cumsum.hpp  equiv_subranges.hpp  inversion.cpp  inversion.hpp  lazy_fill_vector.hpp  lis.cpp  lis.hpp  median_multiset.cpp  median_multiset.hpp  mo.cpp  mo.hpp  runlength.hpp  runlength_content.cpp  runlength_content.hpp  runlength_nocontent.cpp  runlength_nocontent.hpp  sahz.cpp  sahz.hpp  swag.cpp  swag.hpp
template/base_template/: 575.hpp  debug_mode.hpp  dump.cpp  dump.hpp  fast.cpp  fast.hpp  gcc.hpp  immintrin.hpp  ll.cpp  ll.hpp  macro.cpp  macro.hpp  mll.hpp  qin.cpp  qin.hpp
template/conv/: README.md  butterfly.cpp  fft.cpp  (+15 more)
test/: test.cpp  test_dump.cpp
(+113 files in other folders)
